[package]
name = "rezip"
version = "0.1.3"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
edition = "2021"
description = "Merges ZIP/NPZ archives recompressed or aligned and stacks NPY arrays"
repository = "https://github.com/qu1x/rezip"
readme = "README.md"
keywords = ["align", "merge", "zip", "npy", "npz"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
color-eyre = { version = "0.6", default-features = false }
clap = { version = "3", features = ["derive", "cargo", "wrap_help"] }
glob = "0.3"
walkdir = "2"
indexmap = "1"
zip = "0.6"
ndarray = "0.15"
ndarray-npy = { version = "0.8", default-features = false }
